<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/back" />

            <TextView
                android:id="@+id/signtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/reg"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signtext1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/reg_info"
                android:textColor="@color/black" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                app:startIconDrawable="@drawable/user">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:id="@+id/sign_Name"/>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                app:startIconDrawable="@drawable/phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone"
                    android:id="@+id/sign_Phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                app:startIconDrawable="@drawable/message">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:id="@+id/sign_Email"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/lock"
                android:id="@+id/sign_PasswordLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_Password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password" />

            </com.google.android.material.textfield.TextInputLayout>


            <!--            <EditText-->
            <!--                android:id="@+id/signup_name"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="60dp"-->
            <!--                android:layout_marginHorizontal="20dp"-->
            <!--                android:layout_marginTop="24dp"-->
            <!--                android:background="@drawable/custom_input"-->
            <!--                android:drawableStart="@drawable/user"-->
            <!--                android:drawablePadding="12dp"-->
            <!--                android:hint="@string/name"-->
            <!--                android:importantForAutofill="no"-->
            <!--                android:inputType="text"-->
            <!--                android:minHeight="48dp"-->
            <!--                android:paddingStart="12dp"-->
            <!--                android:paddingEnd="12dp"-->
            <!--                android:textColorHint="#78909C" />-->

            <!--            <EditText-->
            <!--                android:id="@+id/signup_email"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="60dp"-->
            <!--                android:layout_marginHorizontal="20dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:autofillHints="no"-->
            <!--                android:background="@drawable/custom_input"-->
            <!--                android:drawableStart="@drawable/message"-->
            <!--                android:drawablePadding="12dp"-->
            <!--                android:hint="@string/email"-->
            <!--                android:inputType="textEmailAddress"-->
            <!--                android:minHeight="48dp"-->
            <!--                android:paddingStart="12dp"-->
            <!--                android:paddingEnd="12dp" />-->


            <!--            <EditText-->
            <!--                android:id="@+id/signup_password"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="60dp"-->
            <!--                android:layout_marginHorizontal="20dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:autofillHints="no"-->
            <!--                android:background="@drawable/custom_input"-->
            <!--                android:drawableStart="@drawable/lock"-->
            <!--                android:drawablePadding="12dp"-->
            <!--                android:hint="@string/password"-->
            <!--                android:inputType="textPassword"-->
            <!--                android:minHeight="48dp"-->
            <!--                android:paddingStart="12dp"-->
            <!--                android:paddingEnd="12dp" />-->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/green_btn_bg"
                android:text="@string/sign_in2"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="#9E9E9E" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/help"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <View
                        android:id="@+id/view1"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="#9E9E9E" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/google" />

                    <ImageView
                        android:id="@+id/imageView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/facebook" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/newuser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/old_user"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/logNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>